<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1.0"
    android:background="@drawable/default_bg"
    android:orientation="vertical" >

    <!-- android:layout_gravity="center_horizontal|center_vertical"这句貌似没用啊 -->

    <RelativeLayout
        android:id="@+id/loginMiddle"
        android:layout_width="wrap_content"
        android:layout_height="350.0px"
        android:layout_marginLeft="15.0px"
        android:layout_marginRight="15.0px"
        android:layout_marginTop="30.0px"
        android:layout_weight="0.52"
        android:background="@drawable/login_back"
        android:paddingBottom="10.0px"
        android:paddingTop="21.0px" >

        <ImageView
            android:id="@+id/faceImg"
            android:layout_width="110.0px"
            android:layout_height="150.0px"
            android:layout_alignBottom="@+id/login_edit_pwd"
            android:background="@drawable/login_head"
            android:contentDescription="@string/imagefun" />

        <EditText
            android:id="@+id/login_edit_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5.0px"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_toRightOf="@+id/faceImg"
            android:background="@drawable/qq_edit_login"
            android:hint="@string/defaultfenlei"
            android:maxLength="10"
            android:paddingLeft="45.0sp"
            android:saveEnabled="true" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_edit_account"
            android:layout_alignLeft="@+id/login_edit_account"
            android:layout_alignTop="@+id/login_edit_account"
            android:layout_marginRight="15.0sp"
            android:gravity="center_vertical"
            android:paddingLeft="7.0sp"
            android:text="@string/fenlei"
            android:textColor="#ff3f3f3f"
            android:textSize="16.0dip" />

        <ImageButton
            android:id="@+id/selectuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_edit_account"
            android:layout_alignRight="@+id/login_edit_account"
            android:layout_alignTop="@+id/login_edit_account"
            android:layout_marginRight="1.0dip"
            android:background="@drawable/more_select"
            android:contentDescription="@string/imagefun" />

        <EditText
            android:id="@+id/login_edit_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_edit_account"
            android:layout_alignRight="@+id/login_edit_account"
            android:layout_below="@+id/login_edit_account"
            android:layout_marginRight="1.0dip"
            android:background="@drawable/qq_edit_login"
            android:hint="@string/inputweizhi"
            android:maxLength="16"
            android:paddingLeft="45.0sp"
            android:saveEnabled="true" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_edit_pwd"
            android:layout_alignRight="@+id/TextView01"
            android:layout_alignTop="@+id/login_edit_pwd"
            android:gravity="center_vertical"
            android:paddingLeft="7.0sp"
            android:text="@string/weizhi"
            android:textColor="#ff3f3f3f"
            android:textSize="16.0dip" />

        <EditText
            android:id="@+id/register_edit_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/register_btn_register"
            android:layout_alignLeft="@+id/faceImg"
            android:layout_alignRight="@+id/login_edit_pwd"
            android:layout_below="@+id/faceImg"
            android:background="@drawable/qq_edit_login"
            android:ems="10"
            android:height="200dp"
            android:hint="@string/inputcontent"
            android:maxLength="16"
            android:paddingLeft="45.0sp"
            android:saveEnabled="true" />

        <Button
            android:id="@+id/register_btn_register"
            android:layout_width="130.0px"
            android:layout_height="60.0px"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/login_edit_account"
            android:layout_marginBottom="48dp"
            android:layout_toRightOf="@+id/TextView02"
            android:text="@string/addevent"
            android:textSize="15.0sp" />

        <Button
            android:id="@+id/return_btn_return"
            android:layout_width="130.0px"
            android:layout_height="60.0px"
            android:layout_alignLeft="@+id/register_edit_pwd"
            android:layout_alignTop="@+id/register_btn_register"
            android:layout_marginLeft="15dp"
            android:text="@string/cancel"
            android:textSize="15.0sp" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/register_btn_register"
            android:layout_marginTop="22dp"
            android:layout_toRightOf="@+id/TextView01"
            android:text="仅好友可见" />

    </RelativeLayout>

</LinearLayout>